# zhaos-tools

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  config.py  debug_students.py  main.py  pyproject.toml  run.py  todo  zhaos_tools.db
.cursor/rules/: no-service-startup.mdc  python-package-management.mdc  temporary-files-cleanup.mdc  uv-project-startup.mdc
.github/workflows/: release.yml
app/: README.md  __init__.py  analyze_excel.py  check_excel.py  compare_sheets.py  main.py  pubspec.yaml  test_excel.dart  代码架构分析报告.md  接口文档.md
app/ai/: __init__.py  base.py  config.py  langchain_base.py  langfuse_client.py
app/api/: __init__.py
app/core/: __init__.py  config.py  database.py  logger.py
app/docs/: ARCHITECTURE.md  FUNCTIONAL_DESIGN.md  PROGRESS.md  PROGRESS_COMPARISON.md  UI_DESIGN.md
app/lib/: main.dart
app/linux/: CMakeLists.txt
app/models/: __init__.py
app/schemas/: __init__.py  ai_key_schema.py  checkin.py  class_schema.py  common.py  config_schema.py  student.py  student_log.py  teacher_diary.py
app/services/: __init__.py  ai_key_service.py  checkin_service.py  class_service.py  config_service.py  excel_service.py  reply_service.py  student_log_service.py  student_service.py  teacher_diary_service.py
app/test/: widget_test.dart
app/utils/: __init__.py  age_calculator.py  exceptions.py  id_card_utils.py
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
docs/: Excel导入指南.md  功能介绍.md  截图清单.md
fronted/: README.md  package.json
fronted/src/: App.vue  main.ts
zlfx/: 成绩分析.py
(+124 files in other folders)
