[project]
name = "zhaos-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langfuse>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "pywinauto>=0.6.9",
    "ruff>=0.12.3",
    "uvicorn[standard]>=0.35.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
